<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_component"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".firstapp.MenuActivity">
<!--How do I put rounded edges?-->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSaludApp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="4dp"
        android:background="@drawable/button"
        android:text="@string/app_greet_name"
        android:textColor="@color/white" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnIMCApp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="4dp"
        android:background="@drawable/button"
        android:text="@string/app_IMC_name"
        android:textColor="@color/white" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnTODOApp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="4dp"
        android:background="@drawable/button"
        android:text="@string/app_todo_name"
        android:textColor="@color/white" />

</LinearLayout>